add jwt authentication

--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,16 @@
                 <div class="input-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" placeholder="Enter your email" required />
-                    <span class="error-message">Enter Valid Email</span>
+                    <span class="error-message" id="emailError">Enter Valid Email</span>
                 </div>
 
                 <div class="input-group">
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Enter your password" required />
-                    <span class="error-message">Enter Valid Password</span>
+                    <span class="error-message" id="passwordError">Enter Valid Password</span>
                 </div>
 
-                <button type="submit">Login</button>
+                <button id="submitButton" type="submit">Login</button>
             </form>
         </div>
 
@@ -54,6 +54,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
