--- a/public/general.html
+++ b/public/general.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/general.css">
     <script src="https://kit.fontawesome.com/f077b295a0.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.9.179/pdf.min.js"></script>
     <title>General Notes</title>
 </head>
 <body>
@@ -33,7 +34,7 @@
     <div id="pdfModal">
         <div id="pdfContainer">
             <button class="close-btn" onclick="closePDF()">✖</button>
-            <iframe id="pdfViewer"></iframe>
+            <canvas id="pdfCanvas"></canvas>
         </div>
     </div>
     </div>
